[gd_scene load_steps=28 format=3 uid="uid://be7vle7ujtjw"]

[ext_resource type="Script" uid="uid://cwsdrr3sbj4s3" path="res://scripts/sala.gd" id="1_si00f"]
[ext_resource type="Texture2D" uid="uid://bjicsywbw6wuj" path="res://assets/Sala/Sala1/Sala1.png" id="2_vj1mb"]
[ext_resource type="PackedScene" uid="uid://diixlkqaopvfi" path="res://Jogador/watson.tscn" id="3_vj1mb"]
[ext_resource type="Texture2D" uid="uid://d1e5ndqs6abtm" path="res://assets/icones_evidencias/corpo_vitima.png" id="4_yt1x7"]
[ext_resource type="Texture2D" uid="uid://fk8mluag2rkh" path="res://assets/Sala/Sala1/TV.png" id="5_icira"]
[ext_resource type="PackedScene" uid="uid://8woea7etcoif" path="res://cenas/evidencia.tscn" id="5_p22wk"]
[ext_resource type="PackedScene" uid="uid://bolp5x7ktv07o" path="res://cenas/DialogoUI.tscn" id="7_nb4pq"]
[ext_resource type="Texture2D" uid="uid://bk1lvvyifo8we" path="res://assets/Sala/Sala1/Quadro Sala1.png" id="9_6s0r2"]
[ext_resource type="Texture2D" uid="uid://dflxrjs8c41f3" path="res://assets/Sala/Sala1/cor_parede.png" id="9_tkemp"]
[ext_resource type="PackedScene" uid="uid://bll8q8cwh1fse" path="res://UI/HUD.tscn" id="11_tkemp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yt1x7"]
size = Vector2(383, 146)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_icira"]
size = Vector2(32, 15.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p22wk"]
size = Vector2(31, 241)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hki5e"]
size = Vector2(383, 30.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nb4pq"]
size = Vector2(29.5, 199)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vb50y"]
size = Vector2(1170.5, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6s0r2"]
size = Vector2(29, 674.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tkemp"]
size = Vector2(674, 155)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6c7p6"]
size = Vector2(498, 33)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l6pxu"]
size = Vector2(230, 55.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7odos"]
size = Vector2(277, 81)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l2bok"]
size = Vector2(360, 122)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fl7tt"]
size = Vector2(523, 29)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g5kw1"]
size = Vector2(62, 303)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_do4yo"]
size = Vector2(361.5, 41.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fvoct"]
size = Vector2(29, 198)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oi6h1"]
size = Vector2(14, 76)

[node name="Sala" type="Node2D"]
script = ExtResource("1_si00f")

[node name="FundoPreto" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="BaseSala" type="Sprite2D" parent="."]
position = Vector2(634, 205)
texture = ExtResource("2_vj1mb")

[node name="ParedesSala" type="StaticBody2D" parent="."]

[node name="ParedeEsqMeio" type="CollisionShape2D" parent="ParedesSala"]
position = Vector2(25.5, -38)
shape = SubResource("RectangleShape2D_yt1x7")

[node name="PeParedeEsqMeio" type="CollisionShape2D" parent="ParedesSala"]
position = Vector2(-150, 121.375)
shape = SubResource("RectangleShape2D_icira")

[node name="ParedeEntradaBaixo" type="CollisionShape2D" parent="ParedesSala"]
position = Vector2(-150.5, 327.5)
shape = SubResource("RectangleShape2D_p22wk")

[node name="ParedeHorizontalBaixo" type="CollisionShape2D" parent="ParedesSala"]
position = Vector2(57.5, 432.25)
shape = SubResource("RectangleShape2D_hki5e")

[node name="ParedeVerticalBaixo" type="CollisionShape2D" parent="ParedesSala"]
position = Vector2(234.25, 541.5)
shape = SubResource("RectangleShape2D_nb4pq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParedesSala"]
position = Vector2(834.75, 626.5)
shape = SubResource("RectangleShape2D_vb50y")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ParedesSala"]
position = Vector2(1403.5, 274.25)
shape = SubResource("RectangleShape2D_6s0r2")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="ParedesSala"]
position = Vector2(524, -162.5)
shape = SubResource("RectangleShape2D_tkemp")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="ParedesSala"]
position = Vector2(1139, -45.5)
shape = SubResource("RectangleShape2D_6c7p6")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="ParedesSala"]
position = Vector2(536, -53.75)
shape = SubResource("RectangleShape2D_l6pxu")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="ParedesSala"]
position = Vector2(491.5, 325.5)
shape = SubResource("RectangleShape2D_7odos")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="ParedesSala"]
position = Vector2(492, 550)
shape = SubResource("RectangleShape2D_l2bok")

[node name="CollisionShape2D9" type="CollisionShape2D" parent="ParedesSala"]
position = Vector2(1120.5, 105.5)
shape = SubResource("RectangleShape2D_fl7tt")

[node name="CollisionShape2D10" type="CollisionShape2D" parent="ParedesSala"]
position = Vector2(894, 272.5)
shape = SubResource("RectangleShape2D_g5kw1")

[node name="CollisionShape2D11" type="CollisionShape2D" parent="ParedesSala"]
position = Vector2(1108.25, 405.125)
shape = SubResource("RectangleShape2D_do4yo")

[node name="PortaParaQuarto" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PortaParaQuarto"]
position = Vector2(873.5, -9)
shape = SubResource("RectangleShape2D_fvoct")

[node name="PontoDeEntradaSalaRua" type="Marker2D" parent="."]
position = Vector2(-86, 173)

[node name="PortaParaRua" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PortaParaRua"]
position = Vector2(-159, 168)
shape = SubResource("RectangleShape2D_oi6h1")

[node name="PontoDeEntradaSalaQuarto" type="Marker2D" parent="."]
position = Vector2(795, 28)

[node name="EvidenciaCorpo" parent="." instance=ExtResource("5_p22wk")]
position = Vector2(347, 104)
id_da_pista = "corpo_vitima"

[node name="Sprite2D" parent="EvidenciaCorpo" index="0"]
position = Vector2(68, 47)
scale = Vector2(0.144531, 0.0996094)
texture = ExtResource("4_yt1x7")

[node name="CollisionShape2D" parent="EvidenciaCorpo" index="1"]
position = Vector2(59.5, 44)

[node name="Watson" parent="." instance=ExtResource("3_vj1mb")]
position = Vector2(-79, 132)

[node name="TV" type="Sprite2D" parent="."]
position = Vector2(492, 472)
texture = ExtResource("5_icira")

[node name="DialogoUI" parent="." instance=ExtResource("7_nb4pq")]

[node name="CorParede" type="Sprite2D" parent="."]
position = Vector2(968.75, 31.75)
scale = Vector2(1.08442, 1.06)
texture = ExtResource("9_tkemp")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="EvidenciaPortaRetrato" parent="." instance=ExtResource("5_p22wk")]
position = Vector2(953, 14)
id_da_pista = "porta_retrato"

[node name="Sprite2D" parent="EvidenciaPortaRetrato" index="0"]
position = Vector2(41.9999, 41.4999)
scale = Vector2(1.32467, 1.32)
texture = ExtResource("9_6s0r2")

[node name="CollisionShape2D" parent="EvidenciaPortaRetrato" index="1"]
position = Vector2(42.375, 78.625)

[node name="CanvasLayer" parent="." instance=ExtResource("11_tkemp")]

[connection signal="body_entered" from="PortaParaQuarto" to="." method="_on_porta_para_quarto_body_entered"]
[connection signal="body_entered" from="PortaParaRua" to="." method="_on_porta_para_rua_body_entered"]

[editable path="EvidenciaCorpo"]
[editable path="EvidenciaPortaRetrato"]
